--- a/Patika_Task_Week_7/src/view/AdminView.form
+++ b/Patika_Task_Week_7/src/view/AdminView.form
@@ -86,17 +86,6 @@
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <component id="415e7" class="javax.swing.JComboBox" binding="cmb_rents_plate_search">
-                        <constraints>
-                          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                        <properties/>
-                      </component>
-                      <hspacer id="f3cd6">
-                        <constraints>
-                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                      </hspacer>
                       <component id="14bb6" class="javax.swing.JLabel" binding="lbl_rents_plate_search">
                         <constraints>
                           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -111,6 +100,20 @@
                         </constraints>
                         <properties>
                           <text value="Search"/>
+                        </properties>
+                      </component>
+                      <component id="415e7" class="javax.swing.JComboBox" binding="cmb_rents_plate_search">
+                        <constraints>
+                          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties/>
+                      </component>
+                      <component id="657cf" class="javax.swing.JButton" binding="btn_rents_default">
+                        <constraints>
+                          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="Default"/>
                         </properties>
                       </component>
                     </children>
